--- a/x11/mate-menus/Makefile
+++ b/x11/mate-menus/Makefile
@@ -24,17 +24,17 @@ USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 INSTALL_TARGET=	install-strip
 
-post-patch:
-	@${REINPLACE_CMD} -e 's|/usr/share/mate|${LOCALBASE}/share/mate|g' \
-		${WRKSRC}/layout/mate-applications.menu \
-		${WRKSRC}/layout/mate-settings.menu
-	@${SED} -e 's|/usr/local|${LOCALBASE}|g' \
-		< ${FILESDIR}/KDE.directory > ${WRKSRC}/KDE.directory
-	@${SED} -e 's|/usr/local|${LOCALBASE}|g' \
-		< ${FILESDIR}/GNOME.directory > ${WRKSRC}/GNOME.directory
+#post-patch:
+#	@${REINPLACE_CMD} -e 's|/usr/share/mate|${LOCALBASE}/share/mate|g' \
+#		${WRKSRC}/layout/mate-applications.menu \
+#		${WRKSRC}/layout/mate-settings.menu
+#	@${SED} -e 's|/usr/local|${LOCALBASE}|g' \
+#		< ${FILESDIR}/KDE.directory > ${WRKSRC}/KDE.directory
+#	@${SED} -e 's|/usr/local|${LOCALBASE}|g' \
+#		< ${FILESDIR}/GNOME.directory > ${WRKSRC}/GNOME.directory
 
-post-install:
-	@${INSTALL_DATA} ${WRKSRC}/*.directory \
-		${STAGEDIR}${PREFIX}/share/mate/desktop-directories/
+#post-install:
+#	@${INSTALL_DATA} ${WRKSRC}/*.directory \
+#		${STAGEDIR}${PREFIX}/share/mate/desktop-directories/
 
 .include <bsd.port.mk>
