Update webkit2-gtk3 to 2.20.0. (still need enchant2 committed)

--- a/www/webkit2-gtk3/Makefile
+++ b/www/webkit2-gtk3/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD: head/www/webkit2-gtk3/Makefile 453790 2017-11-09 02:31:47Z jbeich $
 
 PORTNAME=	webkit
-PORTVERSION=	2.18.6
+PORTVERSION=	2.20.0
 CATEGORIES=	www
 MASTER_SITES=	http://webkitgtk.org/releases/
 PKGNAMESUFFIX=	2-gtk3
@@ -14,7 +14,8 @@ COMMENT=	Opensource browser engine using the GTK+ 3 toolkit
 LICENSE=	GPLv2 BSD2CLAUSE
 LICENSE_COMB=	dual
 
-LIB_DEPENDS=	libenchant.so:textproc/enchant \
+LIB_DEPENDS=	libenchant-2.so:textproc/enchant2 \
+		libwoff2dec.so:devel/woff2 \
 		libfontconfig.so:x11-fonts/fontconfig \
 		libfreetype.so:print/freetype2 \
 		libwebp.so:graphics/webp \
@@ -103,6 +104,8 @@ CFLAGS+=	-mminimal-toc
 post-patch:
 	@${REINPLACE_CMD} -e 's|%%BROWSER_PLUGINS_DIR%%|${BROWSER_PLUGINS_DIR}|' \
 		${WRKSRC}/Source/WebKit/Shared/Plugins/unix/PluginSearchPath.cpp
+	@${REINPLACE_CMD} -e 's|"python"|"${PYTHON_VERSION}"|g' \
+		${WRKSRC}/Source/WebInspectorUI/Scripts/copy-user-interface-resources.pl
 # debug why
 #	@${REINPLACE_CMD} -e 's|<webkit2/webkit2.h>|<Source/WebKit/UIProcess/API/gtk/webkit2.h>|g' \
 #		${WRKSRC}/Tools/MiniBrowser/gtk/BrowserWindow.h \
