--- a/x11/gnome-shell/Makefile
+++ b/x11/gnome-shell/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	gnome-shell
-PORTVERSION=	3.26.2
+PORTVERSION=	3.28.0
 CATEGORIES=	x11 gnome
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome3
@@ -14,10 +14,11 @@ LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	docbook-xsl>=0:textproc/docbook-xsl \
+		sassc:textproc/sassc \
 		gnome-control-center:sysutils/gnome-control-center
 LIB_DEPENDS=	libstartup-notification-1.so:x11/startup-notification \
 		libdrm.so:graphics/libdrm \
-		libmutter-1.so:x11-wm/mutter \
+		libmutter-2.so:x11-wm/mutter \
 		libatk-bridge-2.0.so:accessibility/at-spi2-atk \
 		libsoup-2.4.so:devel/libsoup \
 		libjson-glib-1.0.so:devel/json-glib \
@@ -52,8 +53,8 @@ WEBPLUGIN_NAME=	libgnome-shell-browser-plugin.so
 WEBPLUGIN_DIR=	${PREFIX}/lib/mozilla/plugins/
 WEBPLUGIN_FILES=libgnome-shell-browser-plugin.so
 
-MESON_ARGS=	-Denable-systemd=no \
-		-Denable-networkmanager=no
+MESON_ARGS=	-Dsystemd=false \
+		-Dnetworkmanager=false
 CPE_VENDOR=	gnome
 
 GLIB_SCHEMAS=	org.gnome.shell.gschema.xml
